--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="sponspors-inner">
                     <h2 class="section-title">Our Sponspors</h2>
                     <p class="description">
-                    There are many variations of passages of Lorem Ipsum available,but the majority have suffered alteration.
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
                     </p>
                 </div>
 
@@ -205,10 +205,14 @@
         <section class="services">
             <div class="services-inner width-1440">
                 <hr>
+                <div class="service-head">
+                    <div class="section-title">Our Service</div>
+                    <p>There are many variations of our services.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque  inventore.</p>
+                </div>
                 <div class="services-all">
                     <div class="single-services">
                         <h2 class="title">
-                            Flexible Styling Options
+                            Business Stratagy
                         </h2>
                         <p class="description mt-20">
                             With flexible customization options, you have the opportunity to display your staff.
@@ -218,7 +222,7 @@
 
                     <div class="single-services">
                         <h2 class="title">
-                            Flexible Styling Options
+                            Website Development
                         </h2>
                         <p class="description mt-20">
                             With flexible customization options, you have the opportunity to display your staff.
@@ -229,7 +233,7 @@
 
                     <div class="single-services">
                         <h2 class="title">
-                            Flexible Styling Options
+                            Marketing & Reporting
                         </h2>
                         <p class="description mt-20">
                             With flexible customization options, you have the opportunity to display your staff.
@@ -239,7 +243,7 @@
 
                     <div class="single-services">
                         <h2 class="title">
-                            Flexible Styling Options
+                            App Development
                         </h2>
                         <p class="description">
                             With flexible customization options, you have the opportunity to display your staff.
@@ -249,7 +253,6 @@
 
                 </div>
             </div>
-
 
         </section>
         <!-- End services area  -->
